--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>org.cyberpwn</groupId>
 			<artifactId>phantom</artifactId>
-			<version>P5</version>
+			<version>P8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -139,6 +139,27 @@
 			<groupId>LibsDisguises</groupId>
 			<artifactId>LibsDisguises</artifactId>
 			<version>9.0.7</version>
+		</dependency>
+		<dependency>
+			<groupId>Essentialsx</groupId>
+			<artifactId>essx</artifactId>
+			<scope>system</scope>
+			<systemPath>${req.lib}/EssentialsX-2.0.1_b421.jar</systemPath>
+			<version>1.8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>WorldGuard</groupId>
+			<artifactId>wga</artifactId>
+			<scope>system</scope>
+			<systemPath>${req.lib}/worldguard-6.1.2.jar</systemPath>
+			<version>1.8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>WorldEdit</groupId>
+			<artifactId>wed</artifactId>
+			<scope>system</scope>
+			<systemPath>${req.lib}/worldedit-bukkit-6.1.3.jar</systemPath>
+			<version>1.8.8</version>
 		</dependency>
 	</dependencies>
 </project>
