--- a/pom.xml
+++ b/pom.xml
@@ -104,12 +104,20 @@
 			<url>https://raw.githubusercontent.com/PhantomAPI/Phantom/master/repository/</url>
 		</repository>
 		<repository>
+			<id>global</id>
+			<url>http://nexus.cyberpwn.org/content/repositories/releases/</url>
+		</repository>
+		<repository>
 			<id>vault-repo</id>
 			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
 		<repository>
 			<id>placeholderapi</id>
 			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+		</repository>
+		<repository>
+			<id>sk89q-repo</id>
+			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
 	</repositories>
 	<dependencies>
@@ -141,25 +149,19 @@
 			<version>9.0.7</version>
 		</dependency>
 		<dependency>
-			<groupId>Essentialsx</groupId>
-			<artifactId>essx</artifactId>
-			<scope>system</scope>
-			<systemPath>${req.lib}/EssentialsX-2.0.1_b421.jar</systemPath>
-			<version>1.8.8</version>
+			<groupId>org.cyberpwn</groupId>
+			<artifactId>essentials</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>WorldGuard</groupId>
-			<artifactId>wga</artifactId>
-			<scope>system</scope>
-			<systemPath>${req.lib}/worldguard-6.1.2.jar</systemPath>
-			<version>1.8.8</version>
+			<groupId>com.sk89q</groupId>
+			<artifactId>worldguard</artifactId>
+			<version>6.1</version>
 		</dependency>
 		<dependency>
-			<groupId>WorldEdit</groupId>
-			<artifactId>wed</artifactId>
-			<scope>system</scope>
-			<systemPath>${req.lib}/worldedit-bukkit-6.1.3.jar</systemPath>
-			<version>1.8.8</version>
+			<groupId>org.cyberpwn</groupId>
+			<artifactId>worldedit</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
